--- a/index.html
+++ b/index.html
@@ -4,12 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Apple</title>
 </head>
 <body>
     <nav class="navbar">
-        <div>
+        <div class="flexbox">
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+
             <img src="images/globalnav_apple_image.svg" alt="logo">
+            <img src="images/globalnav_links_store_image.svg" alt="store">
+            <img src="images/globalnav_links_mac_image__dazlko3t9a6a_large.svg" alt="mac">
+            <img src="images/globalnav_links_ipad_image__fw9qyj9lloi2_large.svg" alt="ipad">
+            <img src="images/globalnav_links_iphone_image__ko7x4isga4ia_large.svg" alt="iphone">
+            <img src="images/globalnav_links_watch_image__gkoblojrlsqe_large.svg" alt="watch">
+            <img src="images/globalnav_links_airpods_image__f969s84ivmaa_large.svg" alt="aripods">
+            <img src="images/globalnav_links_tvhome_image__zb2ewyxbi6ae_large.svg" alt="tv&home">
+            <img src="images/globalnav_links_onlyonapple_image__c4t8k97tougm_large.svg" alt="onlyonapple">
+            <img src="images/globalnav_links_accessories_image__edj0wqmfwxyu_large.svg" alt="accessories">
+            <img src="images/globalnav_links_support_image__bw9kctll7u3m_large.svg" alt="support">
+            <img src="images/globalnav_search_image__cbllq1gkias2_large.svg" alt="search">
+            <img src="images/globalnav_bag_image__yzte50i47ciu_large.svg" alt="buy">
         </div>
     </nav>
 </body>
