--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link nav-link-store" href="#">
                         <span class="nav-link-text">Store</span>
                     </a>
                 </li>
