complete navbar for destop

--- a/index.html
+++ b/index.html
@@ -23,56 +23,56 @@
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link nav-link-mac" href="#">
                         <span class="nav-link-text">Mac</span>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link nav-link-ipad" href="#">
                         <span class="nav-link-text">iPad</span>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link nav-link-iphone" href="#">
                         <span class="nav-link-text">iPhone</span>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link nav-link-watch" href="#">
                         <span class="nav-link-text">Watch</span>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link nav-link-airpods" href="#">
                         <span class="nav-link-text">AirPods</span>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link nav-link-tvhome" href="#">
                         <span class="nav-link-text">TV & Home</span>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link nav-link-onlyonapple" href="#">
                         <span class="nav-link-text">Only on Apple</span>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link nav-link-accessories" href="#">
                         <span class="nav-link-text">Accessories</span>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link nav-link-support" href="#">
                         <span class="nav-link-text">Support</span>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link nav-link-search" href="#">
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link nav-link-bag" href="#">
                         <span class="nav-link-text">Shopping Bag</span>
                     </a>
                 </li>
