started navbar for smaller devices

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=over">
+    <link rel="icon" href="/images/apple.png">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/navbar.css">
     <title>Apple</title>
@@ -11,6 +12,9 @@
 <body>
     <nav class="navbar">
         <div class="nav-div">
+            <ul class="nav-mob-ul">
+                <li>asf</li>
+            </ul>
             <ul class="nav-ul">
                 <li>
                     <a class="nav-link-logo nav-link" href="#">
@@ -79,5 +83,8 @@
             </ul>
         </div>
     </nav>
+
+
+    <a href="https://www.flaticon.com/free-icons/apple" title="apple icons">Apple icons created by Pixel Buddha - Flaticon</a>
 </body>
 </html>
